--- a/.github/workflows/build-analyze-macos.yml
+++ b/.github/workflows/build-analyze-macos.yml
@@ -50,10 +50,10 @@ jobs:
         submodules: true
 
     # Initializes the CodeQL tools for scanning.
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v1
-      with:
-        languages: ${{ matrix.language }}
+#     - name: Initialize CodeQL
+#       uses: github/codeql-action/init@v1
+#       with:
+#         languages: ${{ matrix.language }}
         # If you wish to specify custom queries, you can do so here or in a config file.
         # By default, queries listed here will override any specified in a config file.
         # Prefix the list here with "+" to use these queries and those in the config file.
@@ -65,12 +65,16 @@ jobs:
     # ✏️ If the Autobuild fails above, remove it and uncomment the following three lines
     #    and modify them (or add more) to build your code if your project
     #    uses a compiled language
-
+    - name: Sign in to EVS
+      run: |    
+        python3 -m pip install --upgrade castlabs-evs
+        python3 -m castlabs_evs.account refresh
+        
     - run: |
        yarn install
        yarn dist -m -p never
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v1
+#     - name: Perform CodeQL Analysis
+#       uses: github/codeql-action/analyze@v1
 
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2.2.3
