--- a/.github/workflows/build-analyze-macos.yml
+++ b/.github/workflows/build-analyze-macos.yml
@@ -29,7 +29,7 @@ on:
 jobs:
   analyze:
     name: Analyze
-    runs-on: macos-latest
+    runs-on: macos-10.15
     permissions:
       actions: read
       contents: read
