--- a/.github/workflows/build-analyze-macos.yml
+++ b/.github/workflows/build-analyze-macos.yml
@@ -29,7 +29,7 @@ on:
 jobs:
   analyze:
     name: Analyze
-    runs-on: macos-10.15
+    runs-on: macos-11
     permissions:
       actions: read
       contents: read
@@ -87,6 +87,7 @@ jobs:
         CSC_KEY_PASSWORD: ${{ secrets.CSC_KEY_PASSWORD }} 
         APPLEID: ${{ secrets.APPLEID }}
         APPLEIDPASS: ${{ secrets.APPLEIDPASS }}
+        DEVELOPER_DIR: /Applications/Xcode_12.4.app/Contents/Developer
       run: |
        yarn install
        yarn dist:universalNotWorking -p never
