--- a/.github/workflows/build-analyze-macos.yml
+++ b/.github/workflows/build-analyze-macos.yml
@@ -102,5 +102,5 @@ jobs:
         # Artifact name
         name: macOS
         # A file, directory or wildcard pattern that describes what to upload
-        path: dist/
+        path: dist/*.dmg
         # The desired behavior if no files are found using the provided path.
